apps/join/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: join
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: join
  template:
    metadata:
      labels:
        app: join
    spec:
      imagePullSecrets:
        - name: pikol-pull-secret
      containers:
        - name: join
          image: ghcr.io/pikol-app/join:x.x.x
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              memory: 100Mi
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            timeoutSeconds: 5
