apps/join/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: join
spec:
  selector:
    app: join
  ports:
    - name: join-svc-port
      protocol: TCP
      port: 80
      targetPort: 3000
